--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "classmap": [
             "database"
         ],
+        "files": ["app/Helpers/register.php"],
         "psr-4": {
             "App\\": "app/"
         }
