--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+APP_NAME=laracore
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=base64:9wBF5r8zgm1nSw5m9MFZmKoedQZiGQ1AhyI0OUVD4rU=
@@ -7,8 +8,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -21,6 +22,6 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=5c57b103234790
+MAIL_PASSWORD=6fba2bddc1b620
 MAIL_ENCRYPTION=null
