route for size image manegment env CACHE_PHOTO_MINUTE and CACHE_EXPIRE

--- a/.env
+++ b/.env
@@ -15,6 +15,8 @@ DB_PASSWORD=
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
+CACHE_EXPIRE=144000
+CACHE_PHOTO_MINUTE=144000
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
