--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=laracore
-APP_ADMIN=../laraadmin
+APP_ADMIN=./
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=base64:9wBF5r8zgm1nSw5m9MFZmKoedQZiGQ1AhyI0OUVD4rU=
